# aoc

2022/: .gitignore  pyproject.toml
2022/src/aoc_2022/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_XX.py  iterutils.py  main.py  utils.py
2022/tests/: test_all.py  test_day_04.py  test_day_05.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_11.py  test_day_12.py  utils.py
2022/tests/data/: day_01.toml  day_02.toml  day_03.toml  day_04.toml  day_05.toml  day_06.toml  day_07.toml  day_08.toml  day_09.toml  day_10.toml  day_11.toml  day_12.toml  day_XX.toml.fmt
